# Architrex

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
Architrex/: CMakeLists.txt
Architrex/src/: main.cpp
Renderden/: CMakeLists.txt  main.cpp
Renderden/src/: APIHandler.hpp  Renderden.cpp  Renderden.h  main.cpp
Renderden/src/renderden/: Renderden.cpp  Renderden.h
Renderden/src/shapes/: Shape.cpp  Shape.h  Triangle.cpp
dependencies/: Shader.h
dependencies/glad/include/glad/: gl.h
dependencies/glfw/: CTestTestfile.cmake
dependencies/glfw/src/: CTestTestfile.cmake
src/: Renderden.cpp  Renderden.h  main.cpp
src/shapes/: Triangle.cpp  Triangle.h  Trinagle.h
